--- a/fem_post/view/view.ui
+++ b/fem_post/view/view.ui
@@ -115,6 +115,7 @@
     <property name="title">
      <string>&amp;Tools</string>
     </property>
+    <addaction name="action_Plugin_Manager"/>
    </widget>
    <widget class="QMenu" name="menu_View">
     <property name="title">
@@ -296,6 +297,11 @@
    </property>
    <property name="text">
     <string>&amp;Preferences</string>
+   </property>
+  </action>
+  <action name="action_Plugin_Manager">
+   <property name="text">
+    <string>Plugin Manager</string>
    </property>
   </action>
  </widget>
