1.  committing only because I thought I had lost it

--- a/fem_post/application/core/plugins/vtk_selections_test/vtk_selections_test_ui.ui
+++ b/fem_post/application/core/plugins/vtk_selections_test/vtk_selections_test_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>638</height>
+    <width>436</width>
+    <height>569</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -392,6 +392,48 @@
        </layout>
       </item>
      </layout>
+    </item>
+    <item row="1" column="0">
+     <widget class="QFrame" name="frame">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>100</height>
+       </size>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="QPushButton" name="btn_fit_view">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>20</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Fit View</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="btn_rotation_center">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>20</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Rot. Center</string>
+       </property>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
